Add VS Code extension structure for marketplace publishing
- Add package.json with extension metadata and theme registration
- Add repository information (GitHub URLs)
- Update .vscodeignore to exclude .claude folder
- Add .gitignore to exclude build artifacts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
     "ui"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ramoncardena/alabastro-vscode-color-theme.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ramoncardena/alabastro-vscode-color-theme/issues"
+  },
+  "homepage": "https://github.com/ramoncardena/alabastro-vscode-color-theme#readme",
   "contributes": {
     "themes": [
       {
